# lgs

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  dist.env  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
app/api/: deps.py
app/api/models/: db.py
app/api/routes/: content.py  router.py
app/core/: config.py  db.py  logging.py
app/dto/: content.py  score.py
app/migrations/: env.py  script.py.mako
app/migrations/versions/: c52e4d32301e_init.py
app/models/: content.py  db.py
app/repo/: content.py
app/services/: words_loader.py
app/services/moderation/: __init__.py  abstract.py  ai.py  main.py  stop_words.py
app/tests/: config_tests.py  logging_tests.py  repo_tests.py  score_tests.py  stop_words_tests.py  test.env  words_loader_tests.py
tests/: db_test.py  main_moderator_test.py  router_test.py  routes_test.py  test.env
